# student-task-manager

./: .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_smoke.py
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
